[tool.poetry]
name = "learn_arrow"
version = "0.1.0"
description = ""
authors = ["Larry Jones <larry.jones@reveal-energy.com>"]

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^1.1.0"
ipython = "^7.23.1"
jupyterlab = "^3.0.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
